2011-04-27  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Antti Koivisto.

        Cleanup CSSStyleApplyProperty.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59623

        As first step remove ApplyPropertyColorBase, merge it with ApplyPropertyColor, there's no need for two seperated classes.
        Use typedefs instead of repating the function pointer declarations in a few places.

        * css/CSSStyleApplyProperty.cpp:
        (WebCore::ApplyPropertyDefault::ApplyPropertyDefault):
        (WebCore::ApplyPropertyColor::ApplyPropertyColor):
        (WebCore::ApplyPropertyColor::applyInheritValue):
        (WebCore::ApplyPropertyColor::applyInitialValue):
        (WebCore::ApplyPropertyColor::applyValue):
        (WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):

2011-04-27  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/9335973> REGRESSION (r84341): Buttons in the Mac App store are rendered incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=59622

        Test: fast/borders/border-image-trumps-radius.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::determineBackgroundBleedAvoidance): If there is a renderable, loaded border
        image, then border radius is ignored, so no bleed avoidance is needed.
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::borderImageIsLoadedAndCanBeRendered): Added. Moved some logic here from...
        (WebCore::RenderObject::mustRepaintBackgroundOrBorder): ...here.
        * rendering/RenderObject.h:

2011-02-03  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] editing/pasteboard/copy-standalone-image.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53645

        When writing an image to the clipboard, also write the URL and title
        into the markup and URL portion. This change also abstracts a helper